commit the optimal change in my code major changes